assets/css/style.css
@import "generic_vars.css";

:root {
  --leaderboard-highlight: var(--border-colour);
  --card-radius: 4px;
  --tile-radius: 4px;
  --shadow: 3px 3px 3px rgba(0,0,0,0.1);
}

body {
  Font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
  margin: 20px;
  background: var(--background);
  color: var(--color);
}

a {
  color: var(--tile-green);
  text-decoration:none;
}

header {
  display:flex;
  flex-direction:row;
  justify-content:space-between;
  margin-bottom:20px;
}

header h1 {
  margin:0;
}

header h1 a:nth-of-type(2) {
  color: var(--tile-yellow);
}

header a:hover {
  text-decoration:underline;
}

header .button {
  margin-right:20px;
}

header .button:last-of-type {
  margin-right:0;
}

.grey-box {
  border:2px solid var(--border-colour);
  padding:20px;
  border-radius:var(--card-radius);
}

@media (max-width: 650px) {
  header {
    display:block;
  }

  header h1 {
    margin-bottom:20px;
  }

  header div {
    display:flex;
    flex-direction:row;
    justify-content: space-between;
  }

  header .button {
    margin-right:0;
    font-size: 13px;
  }
}

.message {
  background: var(--message);
  text-align:center;
  padding:10px;
  border-radius: var(--card-radius);
  margin-bottom:20px;
  font-size:14px;
  color:#333;
}

hr {
  border:1px solid var(--border-colour);
  margin:40px 0;
}

.container {
  width:100%;
  max-width:960px;
  margin:auto;
}

.container.login {
  box-sizing: border-box;
  width:100%;
  height:100%;
  display:flex;
  justify-content:center;
}

.container.login .login-form {
  margin-top:100px;
  max-width:400px;
  width:100%;
}

.container.login .login-form h1 {
  margin:0;
}

.container.login .login-form h2 {
  margin-top:0;
  margin-bottom:20px;
  font-size:14px;
}

.container.login .login-form input[type='text'],
.container.login .login-form input[type='email'],
.container.login .login-form input[type='password'],
.container.login .login-form input[type='submit'],
.settings-container input[type='text'],
.settings-container input[type='email'],
.settings-container input[type='password'],
.settings-container input[type='submit']{
  border: 2px solid var(--border-colour);
  border-radius: var(--card-radius);
  padding:10px;
  box-sizing:border-box;
  background:var(--background);
  color:var(--color);
}

.container.login .login-form input[type='text'],
.container.login .login-form input[type='email'],
.container.login .login-form input[type='password'] {
  display:block;
  width:100%;
  margin-bottom:20px;
}

.container.login .login-form-footer {
  display:flex;
  flex-direction:row;
  justify-content: space-between;
  align-items: center;
}

.container.login .login-form-footer p {
  margin:0;
}

.container.login .login-form input[type='submit']:hover {
  cursor:pointer;
}

.graph-container {
  display:flex;
  flex-direction:row;
  margin-bottom:20px;
}

.settings-container,
.leaderboard-container {
  box-sizing: border-box;
}

.settings-container input:not([type='submit']) {
  display:block;
  width:100%;
  box-sizing:border-box;
  margin:10px 0;
}

.button {
  border:2px solid var(--border-colour);
  padding: 10px;
  border-radius: var(--card-radius);
  transition:transform .1s, box-shadow .1s;
  display:inline-block;
  background:var(--background);
  -webkit-appearance: none;
  color:var(--color);
}

.button:hover {
  transform: translate(-2px, -2px);
  box-shadow: var(--shadow);
}

.button.deletebutton {
  color: var(--danger);
}

.button-group .button {
  border-radius: 0;
  margin-left:-2px;
}

.button-group .button:first-child {
  border-top-left-radius: var(--card-radius);
  border-bottom-left-radius: var(--card-radius);
  border-left:2px solid var(--border-colour);
}

.button-group .button:last-child {
  border-top-right-radius: var(--card-radius);
  border-bottom-right-radius: var(--card-radius);
  border-right:2px solid var(--border-colour);
}

.button-group .button.active {
  background: var(--border-colour);
}

@media (max-width: 650px) {
  .button-group .button {
    font-size: 13px;
  }
}

/* Leaderboard */

abbr:hover {
  cursor: help;
}

.sort-dropdown-container {
  text-align:right;
  margin-bottom:10px;
}

.leaderboard-container {
  padding:0;
}

.leaderboard-container table {
  width:100%;
  text-align:right;
  border-collapse:collapse;
  border-style: hidden;
}

.leaderboard-container table tbody tr.gold {
  background-color:var(--leaderboard-gold);
}
.leaderboard-container table tbody tr.silver {
  background-color:var(--leaderboard-silver);
}
.leaderboard-container table tbody tr.bronze {
  background-color:var(--leaderboard-bronze);
}

.leaderboard-container table a {
  font-weight:bold;
  color:var(--color);
}

/*.leaderboard-container table,*/
.leaderboard-container th,
.leaderboard-container td {
  border:solid 1px var(--border-colour);
  padding:5px;
}

/*.leaderboard-container table td:not(:first-of-type),*/
/*.leaderboard-container table th:not(:first-of-type) {*/
/*  width:0.1%;*/
/*  white-space: nowrap;*/
/*}*/

.graph-container .graph {
  flex:auto;
  margin-right:20px;
  width: 0;
}

.graph-container .graph canvas {
  width:100%;
  height:100%;
}

.graph-container .stats {
  flex:none;
  width:33%;
  display:grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 20px;
}

.graph-container .stats .row {
  display:flex;
  flex-direction:column;
  justify-content:space-around;
  align-items: center;
  padding: 10px;
}

.graph-container .stats .row span:first-child {
  font-size: 40px;
  font-weight:bold;
}

.graph-container .stats .row span:last-child {
  font-size:16px;
  color: var(--color-muted);
  font-style: italic;
}

/* 3 width, normal 4x4 grid, smaller font*/
@media (min-width: 651px) and (max-width: 780px) {
  .graph-container .stats .row span:first-child {
    font-size: 30px;
  }
  .graph-container .stats .row span:last-child {
    font-size:12px;
  }
}

/* 2 width, horizontal grid */
@media (max-width: 650px) {
  body {
    margin:10px;
  }
  .graph-container {
    display:block;
    margin-bottom:10px;
  }
  .graph-container .graph {
    width:auto;
    margin-right:0;
  }

  .graph-container .stats {
    width:auto;
    grid-gap: 10px;
    grid-template-columns: 1fr 1fr;
    margin-top: 10px;
  }

  .graph-container .stats .row {
    /*aspect-ratio: 1/1;*/
  }

  .graph-container .stats .row span:first-child {
    font-size: 20px;
  }
  .graph-container .stats .row span:last-child {
    font-size:12px;
  }
}

.cards-container {
  display:grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
}

@media (min-width: 481px) and (max-width: 650px) {
  .cards-container {
    grid-template-columns: 1fr 1fr;
    grid-gap: 10px;
  }
}

@media (max-width: 480px) {
  .cards-container {
    grid-template-columns: 1fr;
    grid-gap: 10px;
  }
}

.card-link {
  display:block;
  transition:transform .15s, box-shadow .15s;
  color:inherit;
  border-radius:var(--card-radius);
}

.result-container .card-link {
  pointer-events: none;
}

.cards-container .card-link:hover {
  /*transform:scale(1.05);*/
  transform: translate(-2px, -2px);
  box-shadow: var(--shadow);
}

.card {
  box-sizing: border-box;
  padding: 20px;
  border: 2px solid var(--border-colour);
  display: inline-flex;
  flex-direction: column;
  width:100%;
  border-radius:var(--card-radius);
}

.result-container {
  display:flex;
  flex-direction:row;
  align-items:baseline;
}

.result-container .result-card {
  flex:1;
  /*max-width: 500px;*/
  margin-right:20px;
}

.result-leaderboard,
.add-result-help {
  flex:1;
  box-sizing: border-box;
  border: 2px solid var(--border-colour);
  border-radius: var(--card-radius);
  display:flex;
  flex-direction: column;
  padding:0;
}

.result-leaderboard .header,
.add-result-help .header {
  background: var(--border-colour);
  color: var(--color-dark);
  flex:none;
  padding:10px;
  text-align:center;
  font-size:30px;
  text-transform: uppercase;
  font-weight:bold;
}

.result-leaderboard .inner,
.add-result-help .inner {
  padding:20px;
  flex:1;
}

.result-leaderboard .inner a .result-leaderboard-line.button {
  display:flex;
  flex-direction:row;
  justify-content: space-between;
}

.result-leaderboard .inner a .result-leaderboard-line.self {
  background-color:var(--leaderboard-highlight);
  color:var(--color-dark);
}

.result-leaderboard .inner a {
  display:block;
  margin-bottom:20px;
}

.result-leaderboard .inner a:last-of-type {
  margin-bottom:0;
}

.result-leaderboard .inner p {
  margin:0;
}

.add-result-help .inner p {
  margin-top:0;
}

.add-result-help .inner p:last-child {
  margin-bottom:0;
}

.result-leaderboard .inner a .result-leaderboard-line.self {
  color:var(--color-dark);
}

.result-pagination {
  margin-top:20px;
  display:flex;
  flex-direction:row;
  justify-content: space-between;
  align-items: center;
}

@media (max-width: 650px) {
  .result-container {
    display:block;
  }

  .result-container .result-card {
    width:auto;
    margin-right:0;
    margin-bottom:20px;
  }
}

.centered-container {
  max-width:672px;
  width:100%;
  margin:auto;
}

.add-result-container {
  display:flex;
  flex-direction:row;
}

.add-result-container .add-result-help {
  flex:1;
}

.add-result-container .add-result-form {
  flex:1;
  margin-right:20px;
}

@media (max-width: 650px) {
  .add-result-container {
    display:block;
  }

  .add-result-container .add-result-form {
    margin-right:0;
    margin-bottom:20px;
  }
}

.add-result-container .add-result-form p {
  margin-top:0;
}

.add-result-container .add-result-form div:last-of-type {
  text-align:right;
}

.add-result-container .add-result-form textarea {
  padding:10px;
  width:100%;
  box-sizing:border-box;
  height: 160px;
  resize: none;
  background:var(--background);
  color:var(--color);
}

.add-result-container .add-result-form input[type='submit'] {
  margin-top:20px;
}

.card .card-header {
  flex:none;
  display:flex;
  flex-direction:row;
  justify-content:space-between;
  align-items: center;
}

.card .card-header p {
  margin-top:0;
}

.card .card-grid {
  flex:auto;
  display:grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-gap: 2px;
}

.card .card-grid .card-grid-square {
  aspect-ratio: 1/1;
  border-radius:var(--tile-radius);
}

.card .card-grid .card-grid-square.G { background: var(--tile-green); }
.card .card-grid .card-grid-square.Y { background: var(--tile-yellow); }
.card .card-grid .card-grid-square.X { background: var(--tile-black); }
.card .card-grid .card-grid-square.W { background: var(--tile-clear); }

